tests/NormalTests/paczka1/fuzzy1/97535929.err
Error in line 16: 5PAucl S581 58,6
Error in line 19: 5PAucl S677 73,0
Error in line 28: OTiaPlMasmp A827 34,1
Error in line 24: 5PAucl A827 85,0
Error in line 38: SeUyWp A827 104,36
